--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://kit.fontawesome.com/d02886dc88.js" crossorigin="anonymous"></script>
   <meta name="description" content="Web app messenger" />
   <title>Chat App</title>
 </head>
