--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://kit.fontawesome.com/d02886dc88.js" crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+  </style>
   <meta name="description" content="Web app messenger" />
   <title>Chat App</title>
 </head>
